[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twikit-mcp"
version = "0.1.0"
description = "MCP server exposing twikit's Twitter/X capabilities to AI assistants — no official API key required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bintangtimurlangit" }]
keywords = ["mcp", "twitter", "x", "twikit", "model-context-protocol", "ai", "llm"]

dependencies = [
    "mcp>=1.2.0",
    # twikit is bundled (vendored) in this repo under twikit/ with a login patch,
    # because the published twikit is broken on X (the "Couldn't get KEY_BYTE
    # indices" login bug). These are twikit's own runtime dependencies. When
    # upstream ships a login fix, delete the bundled twikit/ and add "twikit"
    # here instead. Original library: https://github.com/d60/twikit
    "httpx[socks]",
    "filetype",
    "beautifulsoup4",
    "pyotp",
    "lxml",
    "webvtt-py",
    "m3u8",
    "Js2Py-3.13",
]

[project.urls]
Homepage = "https://github.com/bintangtimurlangit/twikit-mcp"
"twikit (original library)" = "https://github.com/d60/twikit"

[project.scripts]
twikit-mcp = "twikit_mcp.server:main"

[tool.setuptools.packages.find]
include = ["twikit*", "twikit_mcp*"]

[tool.setuptools.package-data]
twikit = ["py.typed"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=2.3.0",
    "pytest>=8",
    "pre-commit>=4",
    "commitizen>=4",
]

# ── Tooling ──────────────────────────────────────────────────────────────────
# The vendored twikit/ is upstream code and is excluded from lint/format/type
# checks — only our own twikit_mcp/ and tests/ are checked.

[tool.ruff]
line-length = 100
target-version = "py310"
# twikit/ is vendored upstream code; don't lint or reformat it.
extend-exclude = ["twikit"]

[tool.ruff.lint]
# E/F (pycodestyle+pyflakes), I (isort), UP (pyupgrade). `B` (bugbear) is left
# for a later cleanup pass — it flags a few idiomatic fixes in existing code.
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["twikit_mcp"]
ignore_missing_imports = true
# The vendored twikit/ is upstream code — don't report its internal type errors.
follow_imports = "silent"
exclude = ["twikit/"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version = "0.1.0"
